--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,79 @@
 [
   {
+    "url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38032745",
+    "assets_url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38032745/assets",
+    "upload_url": "https://uploads.github.com/repos/sebbekarlsson/fjb/releases/38032745/assets{?name,label}",
+    "html_url": "https://github.com/sebbekarlsson/fjb/releases/tag/amd64-0.0-2",
+    "id": 38032745,
+    "author": {
+      "login": "sebbekarlsson",
+      "id": 6907725,
+      "node_id": "MDQ6VXNlcjY5MDc3MjU=",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6907725?v=4",
+      "gravatar_id": "",
+      "url": "https://api.github.com/users/sebbekarlsson",
+      "html_url": "https://github.com/sebbekarlsson",
+      "followers_url": "https://api.github.com/users/sebbekarlsson/followers",
+      "following_url": "https://api.github.com/users/sebbekarlsson/following{/other_user}",
+      "gists_url": "https://api.github.com/users/sebbekarlsson/gists{/gist_id}",
+      "starred_url": "https://api.github.com/users/sebbekarlsson/starred{/owner}{/repo}",
+      "subscriptions_url": "https://api.github.com/users/sebbekarlsson/subscriptions",
+      "organizations_url": "https://api.github.com/users/sebbekarlsson/orgs",
+      "repos_url": "https://api.github.com/users/sebbekarlsson/repos",
+      "events_url": "https://api.github.com/users/sebbekarlsson/events{/privacy}",
+      "received_events_url": "https://api.github.com/users/sebbekarlsson/received_events",
+      "type": "User",
+      "site_admin": false
+    },
+    "node_id": "MDc6UmVsZWFzZTM4MDMyNzQ1",
+    "tag_name": "amd64-0.0-2",
+    "target_commitish": "master",
+    "name": "fjb amd64-0.0-2 (.deb package)",
+    "draft": false,
+    "prerelease": true,
+    "created_at": "2021-02-14T17:28:52Z",
+    "published_at": "2021-02-14T17:31:01Z",
+    "assets": [
+      {
+        "url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/assets/32068463",
+        "id": 32068463,
+        "node_id": "MDEyOlJlbGVhc2VBc3NldDMyMDY4NDYz",
+        "name": "fjb_0.0-2.deb",
+        "label": null,
+        "uploader": {
+          "login": "sebbekarlsson",
+          "id": 6907725,
+          "node_id": "MDQ6VXNlcjY5MDc3MjU=",
+          "avatar_url": "https://avatars.githubusercontent.com/u/6907725?v=4",
+          "gravatar_id": "",
+          "url": "https://api.github.com/users/sebbekarlsson",
+          "html_url": "https://github.com/sebbekarlsson",
+          "followers_url": "https://api.github.com/users/sebbekarlsson/followers",
+          "following_url": "https://api.github.com/users/sebbekarlsson/following{/other_user}",
+          "gists_url": "https://api.github.com/users/sebbekarlsson/gists{/gist_id}",
+          "starred_url": "https://api.github.com/users/sebbekarlsson/starred{/owner}{/repo}",
+          "subscriptions_url": "https://api.github.com/users/sebbekarlsson/subscriptions",
+          "organizations_url": "https://api.github.com/users/sebbekarlsson/orgs",
+          "repos_url": "https://api.github.com/users/sebbekarlsson/repos",
+          "events_url": "https://api.github.com/users/sebbekarlsson/events{/privacy}",
+          "received_events_url": "https://api.github.com/users/sebbekarlsson/received_events",
+          "type": "User",
+          "site_admin": false
+        },
+        "content_type": "application/vnd.debian.binary-package",
+        "state": "uploaded",
+        "size": 97516,
+        "download_count": 0,
+        "created_at": "2021-02-14T17:30:59Z",
+        "updated_at": "2021-02-14T17:31:00Z",
+        "browser_download_url": "https://github.com/sebbekarlsson/fjb/releases/download/amd64-0.0-2/fjb_0.0-2.deb"
+      }
+    ],
+    "tarball_url": "https://api.github.com/repos/sebbekarlsson/fjb/tarball/amd64-0.0-2",
+    "zipball_url": "https://api.github.com/repos/sebbekarlsson/fjb/zipball/amd64-0.0-2",
+    "body": "fjb amd64-0.0-2 (.deb package)"
+  },
+  {
     "url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38026940",
     "assets_url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38026940/assets",
     "upload_url": "https://uploads.github.com/repos/sebbekarlsson/fjb/releases/38026940/assets{?name,label}",
