--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,79 @@
 [
   {
+    "url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38060220",
+    "assets_url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38060220/assets",
+    "upload_url": "https://uploads.github.com/repos/sebbekarlsson/fjb/releases/38060220/assets{?name,label}",
+    "html_url": "https://github.com/sebbekarlsson/fjb/releases/tag/amd64-0.0-3",
+    "id": 38060220,
+    "author": {
+      "login": "sebbekarlsson",
+      "id": 6907725,
+      "node_id": "MDQ6VXNlcjY5MDc3MjU=",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6907725?v=4",
+      "gravatar_id": "",
+      "url": "https://api.github.com/users/sebbekarlsson",
+      "html_url": "https://github.com/sebbekarlsson",
+      "followers_url": "https://api.github.com/users/sebbekarlsson/followers",
+      "following_url": "https://api.github.com/users/sebbekarlsson/following{/other_user}",
+      "gists_url": "https://api.github.com/users/sebbekarlsson/gists{/gist_id}",
+      "starred_url": "https://api.github.com/users/sebbekarlsson/starred{/owner}{/repo}",
+      "subscriptions_url": "https://api.github.com/users/sebbekarlsson/subscriptions",
+      "organizations_url": "https://api.github.com/users/sebbekarlsson/orgs",
+      "repos_url": "https://api.github.com/users/sebbekarlsson/repos",
+      "events_url": "https://api.github.com/users/sebbekarlsson/events{/privacy}",
+      "received_events_url": "https://api.github.com/users/sebbekarlsson/received_events",
+      "type": "User",
+      "site_admin": false
+    },
+    "node_id": "MDc6UmVsZWFzZTM4MDYwMjIw",
+    "tag_name": "amd64-0.0-3",
+    "target_commitish": "master",
+    "name": "fjb amd64-0.0-3 (.deb package)",
+    "draft": false,
+    "prerelease": true,
+    "created_at": "2021-02-15T13:16:35Z",
+    "published_at": "2021-02-15T13:17:21Z",
+    "assets": [
+      {
+        "url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/assets/32097610",
+        "id": 32097610,
+        "node_id": "MDEyOlJlbGVhc2VBc3NldDMyMDk3NjEw",
+        "name": "fjb_0.0-3.deb",
+        "label": null,
+        "uploader": {
+          "login": "sebbekarlsson",
+          "id": 6907725,
+          "node_id": "MDQ6VXNlcjY5MDc3MjU=",
+          "avatar_url": "https://avatars.githubusercontent.com/u/6907725?v=4",
+          "gravatar_id": "",
+          "url": "https://api.github.com/users/sebbekarlsson",
+          "html_url": "https://github.com/sebbekarlsson",
+          "followers_url": "https://api.github.com/users/sebbekarlsson/followers",
+          "following_url": "https://api.github.com/users/sebbekarlsson/following{/other_user}",
+          "gists_url": "https://api.github.com/users/sebbekarlsson/gists{/gist_id}",
+          "starred_url": "https://api.github.com/users/sebbekarlsson/starred{/owner}{/repo}",
+          "subscriptions_url": "https://api.github.com/users/sebbekarlsson/subscriptions",
+          "organizations_url": "https://api.github.com/users/sebbekarlsson/orgs",
+          "repos_url": "https://api.github.com/users/sebbekarlsson/repos",
+          "events_url": "https://api.github.com/users/sebbekarlsson/events{/privacy}",
+          "received_events_url": "https://api.github.com/users/sebbekarlsson/received_events",
+          "type": "User",
+          "site_admin": false
+        },
+        "content_type": "application/vnd.debian.binary-package",
+        "state": "uploaded",
+        "size": 96792,
+        "download_count": 0,
+        "created_at": "2021-02-15T13:17:12Z",
+        "updated_at": "2021-02-15T13:17:14Z",
+        "browser_download_url": "https://github.com/sebbekarlsson/fjb/releases/download/amd64-0.0-3/fjb_0.0-3.deb"
+      }
+    ],
+    "tarball_url": "https://api.github.com/repos/sebbekarlsson/fjb/tarball/amd64-0.0-3",
+    "zipball_url": "https://api.github.com/repos/sebbekarlsson/fjb/zipball/amd64-0.0-3",
+    "body": "fjb amd64-0.0-3 (.deb package)"
+  },
+  {
     "url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38032745",
     "assets_url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38032745/assets",
     "upload_url": "https://uploads.github.com/repos/sebbekarlsson/fjb/releases/38032745/assets{?name,label}",
@@ -63,7 +137,7 @@
         "content_type": "application/vnd.debian.binary-package",
         "state": "uploaded",
         "size": 97516,
-        "download_count": 0,
+        "download_count": 1,
         "created_at": "2021-02-14T17:30:59Z",
         "updated_at": "2021-02-14T17:31:00Z",
         "browser_download_url": "https://github.com/sebbekarlsson/fjb/releases/download/amd64-0.0-2/fjb_0.0-2.deb"
@@ -137,7 +211,7 @@
         "content_type": "application/vnd.debian.binary-package",
         "state": "uploaded",
         "size": 93360,
-        "download_count": 0,
+        "download_count": 2,
         "created_at": "2021-02-14T10:23:44Z",
         "updated_at": "2021-02-14T10:23:46Z",
         "browser_download_url": "https://github.com/sebbekarlsson/fjb/releases/download/amd64-0.0-1/fjb_0.0-1.deb"
