--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,79 @@
 [
   {
+    "url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38093229",
+    "assets_url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38093229/assets",
+    "upload_url": "https://uploads.github.com/repos/sebbekarlsson/fjb/releases/38093229/assets{?name,label}",
+    "html_url": "https://github.com/sebbekarlsson/fjb/releases/tag/fjb_0.0-6-amd64-linux",
+    "id": 38093229,
+    "author": {
+      "login": "sebbekarlsson",
+      "id": 6907725,
+      "node_id": "MDQ6VXNlcjY5MDc3MjU=",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6907725?v=4",
+      "gravatar_id": "",
+      "url": "https://api.github.com/users/sebbekarlsson",
+      "html_url": "https://github.com/sebbekarlsson",
+      "followers_url": "https://api.github.com/users/sebbekarlsson/followers",
+      "following_url": "https://api.github.com/users/sebbekarlsson/following{/other_user}",
+      "gists_url": "https://api.github.com/users/sebbekarlsson/gists{/gist_id}",
+      "starred_url": "https://api.github.com/users/sebbekarlsson/starred{/owner}{/repo}",
+      "subscriptions_url": "https://api.github.com/users/sebbekarlsson/subscriptions",
+      "organizations_url": "https://api.github.com/users/sebbekarlsson/orgs",
+      "repos_url": "https://api.github.com/users/sebbekarlsson/repos",
+      "events_url": "https://api.github.com/users/sebbekarlsson/events{/privacy}",
+      "received_events_url": "https://api.github.com/users/sebbekarlsson/received_events",
+      "type": "User",
+      "site_admin": false
+    },
+    "node_id": "MDc6UmVsZWFzZTM4MDkzMjI5",
+    "tag_name": "fjb_0.0-6-amd64-linux",
+    "target_commitish": "master",
+    "name": "fjb_0.0-6-amd64-linux",
+    "draft": false,
+    "prerelease": true,
+    "created_at": "2021-02-16T07:32:27Z",
+    "published_at": "2021-02-16T07:35:28Z",
+    "assets": [
+      {
+        "url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/assets/32130716",
+        "id": 32130716,
+        "node_id": "MDEyOlJlbGVhc2VBc3NldDMyMTMwNzE2",
+        "name": "fjb_0.0-6.deb",
+        "label": "",
+        "uploader": {
+          "login": "sebbekarlsson",
+          "id": 6907725,
+          "node_id": "MDQ6VXNlcjY5MDc3MjU=",
+          "avatar_url": "https://avatars.githubusercontent.com/u/6907725?v=4",
+          "gravatar_id": "",
+          "url": "https://api.github.com/users/sebbekarlsson",
+          "html_url": "https://github.com/sebbekarlsson",
+          "followers_url": "https://api.github.com/users/sebbekarlsson/followers",
+          "following_url": "https://api.github.com/users/sebbekarlsson/following{/other_user}",
+          "gists_url": "https://api.github.com/users/sebbekarlsson/gists{/gist_id}",
+          "starred_url": "https://api.github.com/users/sebbekarlsson/starred{/owner}{/repo}",
+          "subscriptions_url": "https://api.github.com/users/sebbekarlsson/subscriptions",
+          "organizations_url": "https://api.github.com/users/sebbekarlsson/orgs",
+          "repos_url": "https://api.github.com/users/sebbekarlsson/repos",
+          "events_url": "https://api.github.com/users/sebbekarlsson/events{/privacy}",
+          "received_events_url": "https://api.github.com/users/sebbekarlsson/received_events",
+          "type": "User",
+          "site_admin": false
+        },
+        "content_type": "application/x-debian-package",
+        "state": "uploaded",
+        "size": 98484,
+        "download_count": 0,
+        "created_at": "2021-02-16T07:35:27Z",
+        "updated_at": "2021-02-16T07:35:27Z",
+        "browser_download_url": "https://github.com/sebbekarlsson/fjb/releases/download/fjb_0.0-6-amd64-linux/fjb_0.0-6.deb"
+      }
+    ],
+    "tarball_url": "https://api.github.com/repos/sebbekarlsson/fjb/tarball/fjb_0.0-6-amd64-linux",
+    "zipball_url": "https://api.github.com/repos/sebbekarlsson/fjb/zipball/fjb_0.0-6-amd64-linux",
+    "body": "* Merge pull request #42 from sebbekarlsson/cmd-args\n\n  Cmd args\n"
+  },
+  {
     "url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38079415",
     "assets_url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38079415/assets",
     "upload_url": "https://uploads.github.com/repos/sebbekarlsson/fjb/releases/38079415/assets{?name,label}",
@@ -63,7 +137,7 @@
         "content_type": "application/vnd.debian.binary-package",
         "state": "uploaded",
         "size": 97060,
-        "download_count": 0,
+        "download_count": 1,
         "created_at": "2021-02-15T21:09:21Z",
         "updated_at": "2021-02-15T21:09:23Z",
         "browser_download_url": "https://github.com/sebbekarlsson/fjb/releases/download/amd64-0.0-5/fjb_0.0-5.deb"
@@ -137,7 +211,7 @@
         "content_type": "application/vnd.debian.binary-package",
         "state": "uploaded",
         "size": 97236,
-        "download_count": 0,
+        "download_count": 1,
         "created_at": "2021-02-15T17:37:35Z",
         "updated_at": "2021-02-15T17:37:36Z",
         "browser_download_url": "https://github.com/sebbekarlsson/fjb/releases/download/amd64-0.0-4/fjb_0.0-4.deb"
@@ -211,7 +285,7 @@
         "content_type": "application/vnd.debian.binary-package",
         "state": "uploaded",
         "size": 96792,
-        "download_count": 0,
+        "download_count": 1,
         "created_at": "2021-02-15T13:17:12Z",
         "updated_at": "2021-02-15T13:17:14Z",
         "browser_download_url": "https://github.com/sebbekarlsson/fjb/releases/download/amd64-0.0-3/fjb_0.0-3.deb"
@@ -285,7 +359,7 @@
         "content_type": "application/vnd.debian.binary-package",
         "state": "uploaded",
         "size": 97516,
-        "download_count": 1,
+        "download_count": 2,
         "created_at": "2021-02-14T17:30:59Z",
         "updated_at": "2021-02-14T17:31:00Z",
         "browser_download_url": "https://github.com/sebbekarlsson/fjb/releases/download/amd64-0.0-2/fjb_0.0-2.deb"
@@ -359,7 +433,7 @@
         "content_type": "application/vnd.debian.binary-package",
         "state": "uploaded",
         "size": 93360,
-        "download_count": 2,
+        "download_count": 3,
         "created_at": "2021-02-14T10:23:44Z",
         "updated_at": "2021-02-14T10:23:46Z",
         "browser_download_url": "https://github.com/sebbekarlsson/fjb/releases/download/amd64-0.0-1/fjb_0.0-1.deb"
