--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,79 @@
 [
   {
+    "url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38386572",
+    "assets_url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38386572/assets",
+    "upload_url": "https://uploads.github.com/repos/sebbekarlsson/fjb/releases/38386572/assets{?name,label}",
+    "html_url": "https://github.com/sebbekarlsson/fjb/releases/tag/fjb_0.0-8-amd64-linux",
+    "id": 38386572,
+    "author": {
+      "login": "sebbekarlsson",
+      "id": 6907725,
+      "node_id": "MDQ6VXNlcjY5MDc3MjU=",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6907725?v=4",
+      "gravatar_id": "",
+      "url": "https://api.github.com/users/sebbekarlsson",
+      "html_url": "https://github.com/sebbekarlsson",
+      "followers_url": "https://api.github.com/users/sebbekarlsson/followers",
+      "following_url": "https://api.github.com/users/sebbekarlsson/following{/other_user}",
+      "gists_url": "https://api.github.com/users/sebbekarlsson/gists{/gist_id}",
+      "starred_url": "https://api.github.com/users/sebbekarlsson/starred{/owner}{/repo}",
+      "subscriptions_url": "https://api.github.com/users/sebbekarlsson/subscriptions",
+      "organizations_url": "https://api.github.com/users/sebbekarlsson/orgs",
+      "repos_url": "https://api.github.com/users/sebbekarlsson/repos",
+      "events_url": "https://api.github.com/users/sebbekarlsson/events{/privacy}",
+      "received_events_url": "https://api.github.com/users/sebbekarlsson/received_events",
+      "type": "User",
+      "site_admin": false
+    },
+    "node_id": "MDc6UmVsZWFzZTM4Mzg2NTcy",
+    "tag_name": "fjb_0.0-8-amd64-linux",
+    "target_commitish": "master",
+    "name": "fjb_0.0-8-amd64-linux",
+    "draft": false,
+    "prerelease": true,
+    "created_at": "2021-02-21T08:49:53Z",
+    "published_at": "2021-02-21T08:50:37Z",
+    "assets": [
+      {
+        "url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/assets/32374674",
+        "id": 32374674,
+        "node_id": "MDEyOlJlbGVhc2VBc3NldDMyMzc0Njc0",
+        "name": "fjb_0.0-8.deb",
+        "label": "",
+        "uploader": {
+          "login": "sebbekarlsson",
+          "id": 6907725,
+          "node_id": "MDQ6VXNlcjY5MDc3MjU=",
+          "avatar_url": "https://avatars.githubusercontent.com/u/6907725?v=4",
+          "gravatar_id": "",
+          "url": "https://api.github.com/users/sebbekarlsson",
+          "html_url": "https://github.com/sebbekarlsson",
+          "followers_url": "https://api.github.com/users/sebbekarlsson/followers",
+          "following_url": "https://api.github.com/users/sebbekarlsson/following{/other_user}",
+          "gists_url": "https://api.github.com/users/sebbekarlsson/gists{/gist_id}",
+          "starred_url": "https://api.github.com/users/sebbekarlsson/starred{/owner}{/repo}",
+          "subscriptions_url": "https://api.github.com/users/sebbekarlsson/subscriptions",
+          "organizations_url": "https://api.github.com/users/sebbekarlsson/orgs",
+          "repos_url": "https://api.github.com/users/sebbekarlsson/repos",
+          "events_url": "https://api.github.com/users/sebbekarlsson/events{/privacy}",
+          "received_events_url": "https://api.github.com/users/sebbekarlsson/received_events",
+          "type": "User",
+          "site_admin": false
+        },
+        "content_type": "application/x-debian-package",
+        "state": "uploaded",
+        "size": 101236,
+        "download_count": 0,
+        "created_at": "2021-02-21T08:50:36Z",
+        "updated_at": "2021-02-21T08:50:37Z",
+        "browser_download_url": "https://github.com/sebbekarlsson/fjb/releases/download/fjb_0.0-8-amd64-linux/fjb_0.0-8.deb"
+      }
+    ],
+    "tarball_url": "https://api.github.com/repos/sebbekarlsson/fjb/tarball/fjb_0.0-8-amd64-linux",
+    "zipball_url": "https://api.github.com/repos/sebbekarlsson/fjb/zipball/fjb_0.0-8-amd64-linux",
+    "body": "* avoid visiting function bodies we dont need to\n\n* Merge pull request #44 from sebbekarlsson/selenium-tests\n\n  adds selenium tests\n\n* remove sleep in web tests \n\n* Merge pull request #45 from sebbekarlsson/jsx-bugfix\n\n  resolve some issues with the order of JSX arguments\n\n* update libs \n\n* Merge pull request #46 from sebbekarlsson/bugfixes\n\n  Bugfixes\n\n* up version \n"
+  },
+  {
     "url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38234414",
     "assets_url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38234414/assets",
     "upload_url": "https://uploads.github.com/repos/sebbekarlsson/fjb/releases/38234414/assets{?name,label}",
