--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,79 @@
 [
   {
+    "url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38440952",
+    "assets_url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38440952/assets",
+    "upload_url": "https://uploads.github.com/repos/sebbekarlsson/fjb/releases/38440952/assets{?name,label}",
+    "html_url": "https://github.com/sebbekarlsson/fjb/releases/tag/fjb_0.1-0-amd64-linux",
+    "id": 38440952,
+    "author": {
+      "login": "sebbekarlsson",
+      "id": 6907725,
+      "node_id": "MDQ6VXNlcjY5MDc3MjU=",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6907725?v=4",
+      "gravatar_id": "",
+      "url": "https://api.github.com/users/sebbekarlsson",
+      "html_url": "https://github.com/sebbekarlsson",
+      "followers_url": "https://api.github.com/users/sebbekarlsson/followers",
+      "following_url": "https://api.github.com/users/sebbekarlsson/following{/other_user}",
+      "gists_url": "https://api.github.com/users/sebbekarlsson/gists{/gist_id}",
+      "starred_url": "https://api.github.com/users/sebbekarlsson/starred{/owner}{/repo}",
+      "subscriptions_url": "https://api.github.com/users/sebbekarlsson/subscriptions",
+      "organizations_url": "https://api.github.com/users/sebbekarlsson/orgs",
+      "repos_url": "https://api.github.com/users/sebbekarlsson/repos",
+      "events_url": "https://api.github.com/users/sebbekarlsson/events{/privacy}",
+      "received_events_url": "https://api.github.com/users/sebbekarlsson/received_events",
+      "type": "User",
+      "site_admin": false
+    },
+    "node_id": "MDc6UmVsZWFzZTM4NDQwOTUy",
+    "tag_name": "fjb_0.1-0-amd64-linux",
+    "target_commitish": "master",
+    "name": "fjb_0.1-0-amd64-linux",
+    "draft": false,
+    "prerelease": true,
+    "created_at": "2021-02-22T18:07:41Z",
+    "published_at": "2021-02-22T18:09:40Z",
+    "assets": [
+      {
+        "url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/assets/32432117",
+        "id": 32432117,
+        "node_id": "MDEyOlJlbGVhc2VBc3NldDMyNDMyMTE3",
+        "name": "fjb_0.1-0.deb",
+        "label": "",
+        "uploader": {
+          "login": "sebbekarlsson",
+          "id": 6907725,
+          "node_id": "MDQ6VXNlcjY5MDc3MjU=",
+          "avatar_url": "https://avatars.githubusercontent.com/u/6907725?v=4",
+          "gravatar_id": "",
+          "url": "https://api.github.com/users/sebbekarlsson",
+          "html_url": "https://github.com/sebbekarlsson",
+          "followers_url": "https://api.github.com/users/sebbekarlsson/followers",
+          "following_url": "https://api.github.com/users/sebbekarlsson/following{/other_user}",
+          "gists_url": "https://api.github.com/users/sebbekarlsson/gists{/gist_id}",
+          "starred_url": "https://api.github.com/users/sebbekarlsson/starred{/owner}{/repo}",
+          "subscriptions_url": "https://api.github.com/users/sebbekarlsson/subscriptions",
+          "organizations_url": "https://api.github.com/users/sebbekarlsson/orgs",
+          "repos_url": "https://api.github.com/users/sebbekarlsson/repos",
+          "events_url": "https://api.github.com/users/sebbekarlsson/events{/privacy}",
+          "received_events_url": "https://api.github.com/users/sebbekarlsson/received_events",
+          "type": "User",
+          "site_admin": false
+        },
+        "content_type": "application/x-debian-package",
+        "state": "uploaded",
+        "size": 107148,
+        "download_count": 0,
+        "created_at": "2021-02-22T18:09:39Z",
+        "updated_at": "2021-02-22T18:09:39Z",
+        "browser_download_url": "https://github.com/sebbekarlsson/fjb/releases/download/fjb_0.1-0-amd64-linux/fjb_0.1-0.deb"
+      }
+    ],
+    "tarball_url": "https://api.github.com/repos/sebbekarlsson/fjb/tarball/fjb_0.1-0-amd64-linux",
+    "zipball_url": "https://api.github.com/repos/sebbekarlsson/fjb/zipball/fjb_0.1-0-amd64-linux",
+    "body": "* properly support .tsx\n\n* updates readme \n\n* Merge pull request #48 from sebbekarlsson/tsx\n\n  Tsx\n"
+  },
+  {
     "url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38394400",
     "assets_url": "https://api.github.com/repos/sebbekarlsson/fjb/releases/38394400/assets",
     "upload_url": "https://uploads.github.com/repos/sebbekarlsson/fjb/releases/38394400/assets{?name,label}",
